# codegen-lab

./: .changelog-config.yml  .codecov.yml  .coverage-tmp.html  .cursorignore  .cursorindexingignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .relint.yml  .windsurfrules  .yamllint.yaml  404.html  AUDIT.md  CHANGELOG.md  CLAUDE.md  Justfile  Justfile.new  Makefile  Makefile.ci  PLAN.md  README.md  RULESFORAI.md  Taskfile.yml  ai_report.md  codegen-lab.code-workspace  codegen_lab.html  debugging_rules_mermaid.md  index.html  mise.toml  mkdocs.yml  mkdocs_macro_plugin.py  objects.inv  pyproject.toml  pyrightconfig.json  search.js  sitemap.xml  taplo.toml  towncrier.toml
.ai/: arch.md  prd.md  story-1.story.md
.cursor/: mcp.json
.cursor/rules/: basedpyright.mdc  bossjones-cursor-tools.mdc  conventional-commits.mdc  dev-loop.mdc  dpytest-config.mdc  dpytest-core.mdc  dpytest-runner.mdc  dpytest-state.mdc  dpytest-verify.mdc  dpytest.mdc  enrich-github-markdown.mdc  explain-code-modification.mdc  fastmcp-tools.mdc  fastmcp.mdc  fastmcp_audit_args.mdc  frontmatter-validator.mdc  gh-action-security.mdc  iterative-development-workflow.mdc  mcp_spec.mdc  project_layout.mdc  pytest-loop.mdc  python-poc-development.mdc  python-refactor.mdc  python-refactoring-planning.mdc  python-refactoring-workflow.mdc  python-tdd-basics.mdc  python_rules.mdc  repo_analyzer.mdc  ruff.mdc  rule-visualization-agent.mdc  suggest-cursor-rule.mdc  uv-workspace.mdc
.cursor/rules/core-rules/: analyze-code-deletions-auto.mdc  prd-prompt-generator-agent.mdc
.cursor/rules/documentation/: markdown-auto.mdc
.cursor/rules/py-rules/: readme.md
.cursor/rules/testing-rules/: bats-testing-manual.mdc
.github/: CODEOWNERS  changelog.yml  dependabot.yml  deploy-docs.yml  release.yaml
.github/workflows/: _reusable-codeql-analysis.yml  autofix.yml  bats.yml  check_changelog.yml  ci.yml  codeql-analysis.yml  dependency-review.yml  deploy-docs.yml  docs.yml  fragments-check.yml  publish.yml  tmate-mac.yml  tmate.yml
ai_docs/audit-cursor-rules/: README.md
ai_docs/commitizen_docs/: commitizen_tools_github_io_commitizen.md  commitizen_tools_github_io_commitizen_commands_bump.md  commitizen_tools_github_io_commitizen_commands_changelog.md  commitizen_tools_github_io_commitizen_commands_check.md  commitizen_tools_github_io_commitizen_commands_commit.md  commitizen_tools_github_io_commitizen_commands_example.md  commitizen_tools_github_io_commitizen_commands_info.md  commitizen_tools_github_io_commitizen_commands_init.md  commitizen_tools_github_io_commitizen_commands_ls.md  commitizen_tools_github_io_commitizen_getting_started.md
ai_docs/reports/: discord_report.md  dpytest_report.md  mcp_client_report.md
ai_docs/wip/: MCP_SERVER_REMOTE_COMPAT_AUDIT.md  TOOL_ARGUMENT_DESCRIPTION_AUDIT.md
api-reference/: index.html
changelog/: index.html
changes/: 20250401220434.chore.md  20250404121809.chore.md  24.chore.1.md  24.chore.md  24.docs.md  24.feat.1.md  24.feat.2.md  24.feat.md  24.refactor.md  towncrier_template.md.jinja
changes/docs/: 4.md
changes/feat/: 1.feat  1.md  2.md
changes/fix/: 3.md
codegen_lab/: __version__.html  cli.html  prompt_library.html  promptlib.html
comitizen/: index.html
contributing/: index.html
cursor-auto-rules-agile-workflow/: index.html
cursor-auto-rules-agile-workflow/agile-readme/: index.html
cursor-auto-rules-agile-workflow/cursor-rules-readme/: index.html
cursor-auto-rules-agile-workflow/templates-readme/: index.html
cursor-auto-rules-agile-workflow/workflows-readme/: index.html
cursor-auto-rules-agile-workflow/xnotes-readme/: index.html
cursor-rules-styles/: index.html
developer-guide/Justfile/: index.html
developer-guide/releases/: index.html
docs/: README.md  api-reference.md  changelog.md  comitizen.md  contributing.md  cursor-rules-styles.md  getting-started.md  index.md  inspiration.md  pre_commit.md  prompt_library_mcp_server.md  rule-deps.md  troubleshooting.md
docs/cursor-auto-rules-agile-workflow/: README.md  cursor-rules-readme.md  templates-readme.md  workflows-readme.md  xnotes-readme.md
docs/developer-guide/: Justfile.md  releases.md
docs/mcp-servers/: prompt_library_mcp.md  prompt_library_mcp_server_tools.md
docs/tools/: cursor-rules.md  uv-workspace.md
docs/user-guide/: configuration.md  docs-automation.md  installation.md
environment/: index.html
getting-started/: index.html
info/: index.html
inspiration/: index.html
justfiles/: changelog.just  commit.just  format.just  install.just  release.just  taplo.just  variables.just
mcp-servers/prompt_library_mcp/: index.html
mcp-servers/prompt_library_mcp_server_tools/: index.html
pre_commit/: index.html
prompt_library_mcp_server/: index.html
rule-deps/: index.html
scripts/: audit_cursor_rules_headers.py  bboxes.py  cursor-logs.sh  serve_docs.py  token_counter.py  update_changelog.py  validate_frontmatter.py
scripts/ci/: cz-prepare-release.sh  cz-release.sh  increase_version_number.py  prepare-release.sh  release.sh
scripts/docs/: gen_ref_pages.py
search/: search_index.json
src/codegen_lab/: __init__.py  __main__.py  __version__.py  cli.py  prompt_library.py
src/cursor_rules_mcp_server/: __init__.py  __main__.py  models.py
tests/: __init__.py  conftest.py  doctor_ensure_ai_report.py  test_context_manager_examples.py  test_file_operations_helpers.py  test_operation_types.py
tests/helpers/: __init__.py  advanced_fixtures.py  file_operations.py  test_fixtures.py
tests/integration/: test_intgr_prompt_library.py
tests/unit/: test_promptlib_models.py  test_promptlib_prompts.py  test_promptlib_resources.py  test_promptlib_tools.py  test_promptlib_utils.py  test_promptlib_workflows.py
tests/unittests/: __init__.py  test_message_handler.py  test_prompt_library.py
tools/cursor-rules/: index.html
tools/uv-workspace/: index.html
troubleshooting/: index.html
user-guide/configuration/: index.html
user-guide/docs-automation/: index.html
user-guide/installation/: index.html
workflow-rules/: index.html
(+76 files in other folders)
